--- a/index.html
+++ b/index.html
@@ -15,72 +15,72 @@
         <i id="left" class="fa-solid fa-angle-left"></i>
         <ul class="carousel">
             <li class="card">
-                <div class="img"><img src="download.jpg" alt="img" draggable="false"></div>
+                <div class="img"><img src="ppp.jpg" alt="img" draggable="false"></div>
                 <h2>Audette Basil</h2>
                 <span>Volleyball Player</span>
             </li> 
             <li class="card">  
-                <div class="img"><img src="download.jpg" alt="img" draggable="false"></div>
+                <div class="img"><img src="ppp.jpg" alt="img" draggable="false"></div>
                 <h2>Daniela Najim</h2>
                 <span>Volleyball Player</span>
             </li> 
             <li class="card">
-                <div class="img"><img src="download.jpg" alt="img" draggable="false"></div>
+                <div class="img"><img src="ppp.jpg" alt="img" draggable="false"></div>
                 <h2>Kazhin mmm</h2>
                 <span>Volleyball Player</span>
             </li>
             <li class="card">
-                <div class="img"><img src="download.jpg" alt="img" draggable="false"></div>
+                <div class="img"><img src="ppp.jpg" alt="img" draggable="false"></div>
                 <h2>Norma Muneer</h2>
                 <span>Volleyball Player</span>
             </li>        
              <li class="card">
-                <div class="img"><img src="download.jpg" alt="img" draggable="false"></div>
+                <div class="img"><img src="ppp.jpg" alt="img" draggable="false"></div>
                 <h2>Rakella Kamaran</h2>
                 <span>Volleyball Player</span>
             </li> 
             <li class="card">
-                <div class="img"><img src="download.jpg" alt="img" draggable="false"></div>
+                <div class="img"><img src="ppp.jpg" alt="img" draggable="false"></div>
                 <h2>Shadin Hazhar</h2>
                 <span>Volleyball Player</span>
             </li> 
             <li class="card">
-                <div class="img"><img src="download.jpg" alt="img" draggable="false"></div>
+                <div class="img"><img src="ppp.jpg" alt="img" draggable="false"></div>
                 <h2>Marsella Thamer</h2>
                 <span>Volleyball Player</span>
             </li> 
             <li class="card">
-                <div class="img"><img src="download.jpg" alt="img" draggable="false"></div>
+                <div class="img"><img src="ppp.jpg" alt="img" draggable="false"></div>
                 <h2>Vanawy Albelaty</h2>
                 <span>Volleyball Player</span>
             </li> 
             <li class="card">
-                <div class="img"><img src="download.jpg" alt="img" draggable="false"></div>
+                <div class="img"><img src="ppp.jpg" alt="img" draggable="false"></div>
                 <h2>Nairy Nabill</h2>
                 <span>Volleyball PLayer</span>
             </li> 
             <li class="card">
-                <div class="img"><img src="download.jpg" alt="img" draggable="false"></div>
+                <div class="img"><img src="ppp.jpg" alt="img" draggable="false"></div>
                 <h2>Malina Shamaya</h2>
                 <span>Volleyball Player</span>
             </li> 
             <li class="card">
-                <div class="img"><img src="download.jpg" alt="img" draggable="false"></div>
+                <div class="img"><img src="ppp.jpg" alt="img" draggable="false"></div>
                 <h2>Lareen Nageeb</h2>
                 <span>Volleyball Player</span>
             </li> 
             <li class="card">
-                <div class="img"><img src="download.jpg" alt="img" draggable="false"></div>
+                <div class="img"><img src="ppp.jpg" alt="img" draggable="false"></div>
                 <h2>Randi  Matti</h2>
                 <span>Coach</span>
             </li> 
             <li class="card">
-                <div class="img"><img src="download.jpg" alt="img" draggable="false"></div>
+                <div class="img"><img src="ppp.jpg" alt="img" draggable="false"></div>
                 <h2>Vodler Baraber</h2>
                 <span>Coach Assistant</span>
             </li> 
             <li class="card">
-                <div class="img"><img src="download.jpg" alt="img" draggable="false"></div>
+                <div class="img"><img src="ppp.jpg" alt="img" draggable="false"></div>
                 <h2>Sasan Boya</h2>
                 <span>Team Supervisor</span>
             </li> 
@@ -89,7 +89,7 @@
        
     </div>
     <div class="button">
-    <a href="players.html"><button>Next</button></a>
+    <a href="https://yousifsud.github.io/volley/"><button>Next</button></a>
     </div>
     <script src="scripts.js" defer></script>
 </body>
