--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <div class="wrapper" id="ppp">
-        <h1>Volleball Women</h1>
+        <h1>Volleyball Women</h1>
         <i id="left" class="fa-solid fa-angle-left"></i>
         <ul class="carousel">
             <li class="card">
